--- a/obrigado.html
+++ b/obrigado.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Obrigado</title>
 </head>
 <body>
+
+
+    
     
 </body>
 </html>
