fix_form_accept

--- a/index.html
+++ b/index.html
@@ -312,11 +312,10 @@
                     <h1>Contato</h1>
                 </div>
 
-                <form onsubmit="sendEmail(); reset(); return false;">
+                <form method="POST" onsubmit="sendForm(event)">
                     <input id="name" name="name" type="text" placeholder="Seu nome" required>
                     <input id="email" name="email" type="email" placeholder="Seu E-mail" required>
-                    <textarea id="message" name="message" cols="30" rows="10" placeholder="Sua mensagem :)"
-                        required></textarea>
+                    <textarea id="message" name="message" cols="30" rows="10" placeholder="Sua mensagem :)" required></textarea>
                     <input id="enviar-btn" type="submit" value="Enviar_">
                 </form>
 
@@ -359,17 +358,25 @@
 <script src="script.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script>
-    function sendEmail() {
-        Email.send({
-            secureToken: "0cfaeacc-74d8-4d0f-9814-7dbfc64ec054",
-            To: 'beatrizcdsmartins.contato@gmail.com',
-            From: document.getElementById("email").value,
-            Subject: "Chegou:",
-            Body: document.getElementById("name")
-        }).then(
-            message => alert(message)
-        );
-    }
+
+function sendForm(event) {
+    event.preventDefault(); // Impedir o envio padrão do formulário
+
+    const name = document.getElementById("name").value;
+    const email = document.getElementById("email").value;
+    const message = document.getElementById("message").value;
+
+    Email.send({
+        SecureToken: "2fd17ec9-7d0e-44f3-b917-a748626b902c",
+        To: 'beatrizcdsmartins.contato@gmail.com',
+        From: email,
+        Subject: "Novo envio de " + name,
+        Body: `Nome: ${name}<br>Email: ${email}<br>Mensagem: ${message}`
+    }).then(
+        response => alert("Email enviado com sucesso!"),
+        error => alert("Falha no envio do email: " + error)
+    );
+}
 </script>
 
 </html>
