--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
                     <img class="mockup" width="500px" src="./assets/images/mockups/pareHq_mockup.webp" alt="landing page image">
                     <div>
                         <p>Desenvolvi uma landing page utilizando <b>HTML, CSS e JavaScript</b>
-                            para um trabalho de conscientização de trânsito do meu pai. A página
-                            tem um design atraente e informativo, destacando a importância e relevância do
-                            da sua HQ.</p>
+                            para uma HQ de conscientização de trânsito do meu pai. A página
+                            tem um design atraente e informativo, destacando a importância e relevância do seu trabalho.</p>
 
                         <div class="container-btn">
                             <a target="_blank" href="https://parehq.com.br/">Deploy <img
@@ -205,12 +204,14 @@
                 <div class="container-project  inverse-container-project" data-aos="zoom-in">
                     <img class="mockup" width="500px" src="./assets/images/mockups/react_hamburguer_mockup.webp" alt="project react image">
                     <div>
-                        <p>Este projeto, desenvolvido com <b>React</b>, permite que
+                        <p>Este projeto permite que
                             o usuário digite seu nome e faça um pedido de hambúrguer.
                             Após o pedido, o usuário é redirecionado para uma página onde
                             pode visualizar todos os pedidos realizados. A aplicação possui
                             uma interface intuitiva
-                            e eficiente, facilitando a navegação e a interação do usuário.</p>
+                            e eficiente, facilitando a navegação e a interação do usuário.
+                        Foi desenvolvido com <b>React, Styled Components e Node.js.</b>
+                        </p>
 
                         <div class="container-btn">
                             <a target="_blank" href="https://genuine-hummingbird-b6ca95.netlify.app/">Deploy <img
@@ -244,10 +245,9 @@
                     <div class="container-project  inverse-container-project" data-aos="fade-right">
                         <img class="mockup" width="500px" src="./assets/images/mockups/conversor_Mockup.webp" alt="mockup">
                         <div>
-                            <p>Este projeto foi desenvolvido com <b>HTML, CSS e JavaScript</b>, e consome
-                                uma <b>API</b> que fornece os valores atualizados do euro, bitcoin e dólar.
+                            <p>Este projeto consome uma <b>API</b> que fornece os valores atualizados do euro, bitcoin e dólar.
                                 O conversor de moedas é prático e fácil de usar, permitindo que os usuários
-                                obtenham rapidamente as cotações mais recentes das moedas.</p>
+                                obtenham rapidamente as cotações mais recentes das moedas. Desenvolvido com <b>HTML, CSS e JavaScript</b>.</p>
 
                             <div class="container-btn">
                                 <a target="_blank"
@@ -264,11 +264,10 @@
                         <img class="circles-shape" src="./assets/shapes/yellow-circle.svg" alt="shapes">
                         <img class="mockup" width="500px" src="./assets/images/mockups/weather_mockup.webp" alt="mockup">
                         <div>
-                            <p>Utilizando <b>HTML, CSS e JavaScript</b>, criei uma aplicação
-                                que consulta uma <b>API</b> para obter o clima em tempo real de qualquer
+                            <p>Aplicação que consulta uma <b>API</b> para obter o clima em tempo real de qualquer
                                 cidade digitada pelo usuário. A interface é limpa e responsiva,
                                 proporcionando uma maneira
-                                rápida e eficiente de obter informações meteorológicas atualizadas.</p>
+                                rápida e eficiente de obter informações meteorológicas atualizadas. Utilizei <b>HTML, CSS e JavaScript</b></p>
 
                             <div class="container-btn">
                                 <a target="_blank" href="https://beatrizcdsmartins.github.io/How-is-the-weather/">Deploy
